Usando DTOs como representation model para recursos de Cozinha

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,8 +7,8 @@ ValorZeroIncluiDescricao={1} deve conter {2}
 TaxaFrete.invalida={0} está inválida
 
 # Cozinha
-cozinha.nome=Nome da cozinha
-cozinha.id=Código da cozinha
+cozinhaInput.nome=Nome da cozinha
+cozinhaInput.id=Código da cozinha
 
 # Restaurante
 NotNull.restauranteInput.taxaFrete={0} é obrigatória
