Usando DTOs como representation model para recursos de Cidade

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,5 +22,5 @@ estado.nome=Nome do estado
 estado.id=Código do estado
 
 # Cidade
-cidade.nome=Nome da cidade
-cidade.estado=Estado da cidade
+cidadeInput.nome=Nome da cidade
+cidadeInput.estado=Estado da cidade
