Usando DTOs como representation model para recursos de Estado

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,8 +18,8 @@ restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
 
 # Estado
-estado.nome=Nome do estado
-estado.id=Código do estado
+estadoInput.nome=Nome do estado
+estadoInput.id=Código do estado
 
 # Cidade
 cidadeInput.nome=Nome da cidade
