--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
 Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
+NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 
 TaxaFrete.invalida={0} está inválida
 
@@ -24,3 +25,7 @@ estadoInput.id=Código do estado
 # Cidade
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
+
+# FormaPagamento
+formaPagamentoInput.descricao=Descricao da forma de pagamento
+formaPagamentoInput.id=Código da forma de pagamento
