Refatorando serviço de cadastro de restaurante para incluir endereço

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,3 +29,16 @@ cidadeInput.estado=Estado da cidade
 # FormaPagamento
 formaPagamentoInput.descricao=Descricao da forma de pagamento
 formaPagamentoInput.id=Código da forma de pagamento
+
+#Endereco
+endereco=Endereço
+endereco.logradouro=Logradouro
+endereco.numero=Número do logradouro
+endereco.cidade=Cidade
+endereco.cidade.id=Código da cidade
+endereco.cep=CEP
+endereco.bairro=Bairro
+
+
+
+
