Criando controller para grupo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ PositiveOrZero={0} deve ser um valor maior ou igual a zero
 Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
+NotBlank.grupoInput.nome={0} é obrigatório
 
 TaxaFrete.invalida={0} está inválida
 
@@ -30,7 +31,7 @@ cidadeInput.estado=Estado da cidade
 formaPagamentoInput.descricao=Descricao da forma de pagamento
 formaPagamentoInput.id=Código da forma de pagamento
 
-#Endereco
+# Endereco
 endereco=Endereço
 endereco.logradouro=Logradouro
 endereco.numero=Número do logradouro
@@ -38,6 +39,10 @@ endereco.cidade=Cidade
 endereco.cidade.id=Código da cidade
 endereco.cep=CEP
 endereco.bairro=Bairro
+
+# Grupo
+grupoInput.nome=Nome do grupo
+grupoInput.id=Código do grupo
 
 
 
