Criando endpoints de Listar, Buscar e Adicionar Usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 NotBlank.grupoInput.nome={0} é obrigatório
+Email.usuarioComSenhaInput.email={0} deve ser um endereço de e-mail válido
 
 TaxaFrete.invalida={0} está inválida
 
@@ -43,6 +44,11 @@ endereco.bairro=Bairro
 # Grupo
 grupoInput.nome=Nome do grupo
 grupoInput.id=Código do grupo
+
+# Usuario
+usuarioComSenhaInput.nome=Nome do usuário
+usuarioComSenhaInput.email=E-mail do usuário
+usuarioComSenhaInput.senha=Senha do usuário
 
 
 
