Criando endpoint PUT para atualizacao de Usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,6 +49,8 @@ grupoInput.id=Código do grupo
 usuarioComSenhaInput.nome=Nome do usuário
 usuarioComSenhaInput.email=E-mail do usuário
 usuarioComSenhaInput.senha=Senha do usuário
+usuarioInput.nome=Nome do usuário
+usuarioInput.email=Email do usuário
 
 
 
