Criando endpoint para atualizacao das senhas dos Usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,6 @@ Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 NotBlank.grupoInput.nome={0} é obrigatório
-Email.usuarioComSenhaInput.email={0} deve ser um endereço de e-mail válido
 
 TaxaFrete.invalida={0} está inválida
 
@@ -51,6 +50,14 @@ usuarioComSenhaInput.email=E-mail do usuário
 usuarioComSenhaInput.senha=Senha do usuário
 usuarioInput.nome=Nome do usuário
 usuarioInput.email=Email do usuário
+
+Email.usuarioComSenhaInput.email={0} deve ser um endereço de e-mail válido
+Email.usuarioInput.email={0} deve ser um endereço de e-mail válido
+
+NotBlank.senhaInput.senhaAtual={0} é obrigatória
+NotBlank.senhaInput.novaSenha={0} é obrigatória
+senhaInput.senhaAtual=Senha atual
+senhaInput.novaSenha=Nova senha
 
 
 
