Criando endpoint para adicionar produtos em um restaurante

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -59,6 +59,13 @@ NotBlank.senhaInput.novaSenha={0} é obrigatória
 senhaInput.senhaAtual=Senha atual
 senhaInput.novaSenha=Nova senha
 
+# Produto
+
+produtoInput.nome=Nome do produto
+produtoInput.descricao=Descricao do produto
+produtoInput.preco=Preço do produto
+produtoInput.ativo=Status ativo do produto
+
 
 
 
