Implementando upload de arquivo com multipart/form-data e validando tamanho

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -91,9 +91,15 @@ pedidoFilter.dataCriacaoFim=Data final de criação do pedido
 pedidoFilter.clienteId=Códio do cliente
 pedidoFilter.restauranteId=Código do restaurante
 
-#Vendas Diarias
+#Vendas Diaria Filter
 vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
 vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
 vendaDiariaFilter.restauranteId=Código do restaurante
+
+#Foto Produto
+fotoProdutoInput.arquivo=Arquivo da foto
+fotoProdutoInput.descricao=Descricao da foto
+FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
+
 
 
